--- a/src/gui/order/BranchMenuScreen.fxml
+++ b/src/gui/order/BranchMenuScreen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,114 +15,121 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.BranchMenuController">
    <children>
-      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
-         <left>
-            <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="653.0">
+      <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <children>
+            <AnchorPane StackPane.alignment="CENTER">
                <children>
-                  <ScrollPane hbarPolicy="NEVER" prefWidth="536.0" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
-                    <content>
-                        <GridPane fx:id="items_grid" alignment="CENTER" hgap="10.0" prefHeight="0.0" prefWidth="0.0" vgap="10.0">
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" />
-                           </rowConstraints>
-                        </GridPane>
-                    </content>
-                  </ScrollPane>
-               </children>
-            </VBox>
-         </left>
-         <top>
-            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_RIGHT">
-               <children>
-                  <HBox fx:id="menu_categories" alignment="CENTER" layoutY="-4.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="58.0" prefWidth="638.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="372.0" AnchorPane.topAnchor="-4.0" />
-                  <HBox alignment="TOP_RIGHT" layoutX="928.0" prefHeight="50.0" prefWidth="68.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="928.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label fx:id="cart_count" prefHeight="17.0" prefWidth="27.0" stylesheets="@../general/GeneralStyleSheet.css" text="0">
-                           <styleClass>
-                              <String fx:value="lbl" />
-                              <String fx:value="span" />
-                           </styleClass>
-                           <HBox.margin>
-                              <Insets top="15.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ImageView fx:id="cart_img" fitHeight="50.0" fitWidth="50.0" onMouseClicked="#goCart" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
-                           <image>
-                              <Image url="@../img/cart.png" />
-                           </image>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </ImageView>
-                     </children>
-                  </HBox>
+                  <ProgressIndicator fx:id="pi" layoutX="505.0" progress="0.0" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="505.0" AnchorPane.rightAnchor="476.0" AnchorPane.topAnchor="300.0" />
                </children>
             </AnchorPane>
-         </top>
-         <right>
-            <Pane maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="636.0" style="-fx-background-color: #DCDCDC;" BorderPane.alignment="CENTER_RIGHT">
-               <children>
-                  <VBox alignment="CENTER" layoutX="22.0" layoutY="28.0" prefHeight="332.0" prefWidth="312.0" styleClass="chosen-dish-card" stylesheets="@../general/GeneralStyleSheet.css">
+            <BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
+               <left>
+                  <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="653.0">
                      <children>
-                        <HBox alignment="CENTER" prefHeight="105.0" prefWidth="395.0">
+                        <ScrollPane hbarPolicy="NEVER" prefWidth="536.0" styleClass="transparent" stylesheets="@../general/GeneralStyleSheet.css">
+                          <content>
+                              <GridPane fx:id="items_grid" alignment="CENTER" hgap="10.0" prefHeight="0.0" prefWidth="0.0" vgap="10.0">
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" />
+                                 </rowConstraints>
+                              </GridPane>
+                          </content>
+                        </ScrollPane>
+                     </children>
+                  </VBox>
+               </left>
+               <top>
+                  <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_RIGHT">
+                     <children>
+                        <HBox fx:id="menu_categories" alignment="CENTER" layoutY="-4.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="58.0" prefWidth="638.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="372.0" AnchorPane.topAnchor="-4.0" />
+                        <HBox alignment="TOP_RIGHT" layoutX="939.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="939.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Label fx:id="selected_dish_name" prefHeight="53.0" prefWidth="104.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="dish name" />
-                              <Label fx:id="selected_dish_price" prefHeight="53.0" prefWidth="64.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="dish price" />
-                           </children>
-                        </HBox>
-                        <ImageView fx:id="selected_dish_img" fitHeight="114.0" fitWidth="219.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/pizaa.jpg" />
-                           </image>
-                        </ImageView>
-                        <VBox fx:id="dish_options_vbox" alignment="CENTER" prefHeight="179.0" prefWidth="375.0" spacing="15.0" styleClass="vbox-dish-options">
-                           <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </VBox.margin>
-                        </VBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                           <children>
-                              <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER">
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
+                              <Label fx:id="cart_count" stylesheets="@../general/GeneralStyleSheet.css" text="0">
                                  <styleClass>
-                                    <String fx:value="btn" />
-                                    <String fx:value="add-btn" />
+                                    <String fx:value="lbl" />
+                                    <String fx:value="span" />
                                  </styleClass>
                                  <HBox.margin>
-                                    <Insets left="30.0" />
+                                    <Insets top="15.0" />
                                  </HBox.margin>
-                              </Button>
-                              <ImageView fx:id="green_v_img" fitHeight="21.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                              </Label>
+                              <ImageView fx:id="cart_img" fitHeight="50.0" fitWidth="50.0" onMouseClicked="#goCart" pickOnBounds="true" preserveRatio="true" styleClass="cart-img">
                                  <image>
-                                    <Image url="@../img/greenv.png" />
+                                    <Image url="@../img/cart.png" />
                                  </image>
                               </ImageView>
                            </children>
                         </HBox>
                      </children>
-                  </VBox>
-                  <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0">
+                  </AnchorPane>
+               </top>
+               <right>
+                  <Pane maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="636.0" style="-fx-background-color: #DCDCDC;" BorderPane.alignment="CENTER_RIGHT">
                      <children>
-                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back_to_branch_selection" styleClass="add-btn" text="Back">
-                           <HBox.margin>
-                              <Insets bottom="20.0" left="10.0" />
-                           </HBox.margin>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
+                        <VBox alignment="CENTER" layoutX="22.0" layoutY="28.0" prefHeight="349.0" prefWidth="312.0" styleClass="chosen-dish-card" stylesheets="@../general/GeneralStyleSheet.css">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="105.0" prefWidth="395.0">
+                                 <children>
+                                    <Label fx:id="selected_dish_name" prefHeight="53.0" prefWidth="104.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="dish name" />
+                                    <Label fx:id="selected_dish_price" prefHeight="53.0" prefWidth="64.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="dish price" />
+                                 </children>
+                              </HBox>
+                              <ImageView fx:id="selected_dish_img" fitHeight="114.0" fitWidth="219.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/pizaa.jpg" />
+                                 </image>
+                              </ImageView>
+                              <VBox fx:id="dish_options_vbox" alignment="CENTER" prefHeight="179.0" prefWidth="375.0" spacing="15.0" styleClass="vbox-dish-options">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </VBox>
+                              <HBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="312.0">
+                                 <VBox.margin>
+                                    <Insets bottom="15.0" />
+                                 </VBox.margin>
+                                 <children>
+                                    <Button fx:id="add_btn" mnemonicParsing="false" onAction="#addToOrder" prefHeight="22.0" prefWidth="149.0" stylesheets="@../general/GeneralStyleSheet.css" text="Add To Order" textAlignment="CENTER">
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <styleClass>
+                                          <String fx:value="btn" />
+                                          <String fx:value="add-btn" />
+                                       </styleClass>
+                                    </Button>
+                                    <ImageView fx:id="green_v_img" fitHeight="24.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                       <image>
+                                          <Image url="@../img/greenv.png" />
+                                       </image>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0">
+                           <children>
+                              <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back_to_branch_selection" styleClass="add-btn" text="Back">
+                                 <HBox.margin>
+                                    <Insets bottom="20.0" left="10.0" />
+                                 </HBox.margin>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </Button>
+                           </children>
+                        </HBox>
+                        <VBox fx:id="cart_vbox" alignment="TOP_RIGHT" layoutX="200.0" layoutY="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #fff; -fx-border-style: solid; -fx-background-radius: 15;" visible="false" />
                      </children>
-                  </HBox>
-                  <VBox fx:id="cart_vbox" alignment="TOP_RIGHT" layoutX="200.0" layoutY="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #fff; -fx-border-style: solid; -fx-background-radius: 15;" visible="false" />
-               </children>
-            </Pane>
-         </right>
-      </BorderPane>
+                  </Pane>
+               </right>
+            </BorderPane>
+         </children>
+      </StackPane>
    </children>
 </VBox>
