--- a/bin/order/BranchMenuScreen.fxml
+++ b/bin/order/BranchMenuScreen.fxml
@@ -40,16 +40,6 @@
                               </GridPane>
                           </content>
                         </ScrollPane>
-                        <Button fx:id="back_btn" mnemonicParsing="false" onAction="#back_to_branch_selection" prefHeight="38.0" prefWidth="77.0" text="Back" translateX="20.0" translateY="250.0">
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                           <styleClass>
-                              <String fx:value="add-btn" />
-                              <String fx:value="ViewBtn" />
-                              <String fx:value="lbl" />
-                           </styleClass>
-                        </Button>
                      </children>
                   </VBox>
                </left>
@@ -128,6 +118,16 @@
                         </VBox>
                         <HBox alignment="BOTTOM_CENTER" layoutY="474.0" prefWidth="356.0" />
                         <VBox fx:id="cart_vbox" alignment="TOP_RIGHT" layoutX="150.0" layoutY="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #fff; -fx-border-style: solid; -fx-background-radius: 15;" visible="false" />
+                        <Button fx:id="back_btn" layoutX="140.0" layoutY="498.0" mnemonicParsing="false" onAction="#back_to_branch_selection" prefHeight="38.0" prefWidth="77.0" text="Back">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <styleClass>
+                              <String fx:value="add-btn" />
+                              <String fx:value="ViewBtn" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </Button>
                      </children>
                   </Pane>
                </right>
