--- a/src/gui/menu/AddDishScreen.fxml
+++ b/src/gui/menu/AddDishScreen.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -23,7 +24,11 @@
                   <String fx:value="ViewBtnOrange" />
                   <String fx:value="lbl" />
                </styleClass></Button>
-            <Label fx:id="result_lbl" layoutX="212.0" layoutY="167.0" prefHeight="17.0" prefWidth="153.0" styleClass="lbl" />
+            <HBox alignment="CENTER" layoutX="135.0" layoutY="167.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <children>
+                  <Label fx:id="result_lbl" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="19.0" prefWidth="351.0" styleClass="lbl" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="441.0" layoutY="244.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/undraw_cooking_lyxy.png" />
