--- a/bin/order/OrderInformationScreen.fxml
+++ b/bin/order/OrderInformationScreen.fxml
@@ -45,7 +45,7 @@
                         <String fx:value="lbl" />
                      </styleClass>
                   </TextField>
-                  <DatePicker fx:id="date_input" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date" stylesheets="@../general/GeneralStyleSheet.css">
+                  <DatePicker fx:id="date_input" editable="false" prefHeight="31.0" prefWidth="136.0" promptText="Supply Date" stylesheets="@../general/GeneralStyleSheet.css">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
